--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,6 @@
     <modules>
         <module>soundcaptor</module>
         <module>percussiondetectorserver</module>
+        <module>test</module>
     </modules>
 </project>
