--- a/test/pom.xml
+++ b/test/pom.xml
@@ -42,7 +42,7 @@
                     <!-- MainClass in manifest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>eu.ubitech.percussiondetector.test.udp.UDPMulticastServer</mainClass>
+                            <mainClass>eu.ubitech.percussiondetector.test.udp.AudioUDPServer</mainClass>
                         </manifest>
                     </archive>
                     <!-- get all project dependencies -->
